--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MovieTestCRUDMethodsForDB.ViewModel
-@model MovieGenreViewModel
+@model MoviesViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -10,7 +10,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<form asp-controller="Movies" asp-action="Index" method="get">
+@* <form asp-controller="Movies" asp-action="Index" method="get">
     Жанр:
     <select asp-for="MovieGenre" asp-items="Model.Genres">
         <option value="">Все</option>
@@ -30,46 +30,99 @@
     Название:
     <input type="text" asp-for="SearchNameString" />
     <input type="submit" value="Поиск" />
+</form> *@
+
+<form asp-controller="Movies" asp-action="Index" method="get">
+    <p>
+        Жанры:
+        <select name="selectedMovieGenre"
+                asp-for="FilteredViewModel.SelectedMovieGenre"
+                value="FilteredViewModel.SelectedMovieGenre"
+                asp-items="Model.FilteredViewModel.Genres">
+            <option value="">Все</option>
+        </select>
+
+        Фильтрация:
+        <select name="sortMovieState"
+                asp-for="SortViewModel.MovieTitleSort">
+            <option value="">Все</option>
+            <option value="AskTitle">По алфавиту (от А до Я)</option>
+            <option value="AskDesc">По алфавиту (от Я до А)</option>
+        </select>
+
+        Название:
+        <input name="selectedMovieTitle" value="@Model.FilteredViewModel.SelectedMovieTitle" type="text" />
+        <input type="submit" value="Поиск" />
+    </p>
+
 </form>
+
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Movies[0].Title)
+                @Html.DisplayNameFor(model => model.Movies.First().Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Movies[0].ReleaseDate)
+                @Html.DisplayNameFor(model => model.Movies.First().ReleaseDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Movies[0].Genre)
+                @Html.DisplayNameFor(model => model.Movies.First().Genre)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Movies[0].Price)
+                @Html.DisplayNameFor(model => model.Movies.First().Price)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Movies) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReleaseDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.Movies)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ReleaseDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Genre)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+
+@if (Model.PageViewModel.HasPreviousPage)
+{
+    <a asp-action="Index"
+       asp-route-page="@(Model.PageViewModel.PageNumber - 1)" asp-route-sortMovieState="@(Model.SortViewModel. MovieTitleSort)"
+       asp-route-selectedMovieGenre="@(Model.FilteredViewModel.SelectedMovieGenre)"
+       asp-route-selectedMovieTitle="@(Model.FilteredViewModel.SelectedMovieTitle)" class="btn btn-outline-dark">
+        <i class="glyphicon glyphicon-chevron-left"></i>
+        Назад
+    </a>
+}
+
+
+@if (Model.PageViewModel.HasNextPage)
+{
+    <a asp-action="Index"
+       asp-route-page="@(Model.PageViewModel.PageNumber + 1)"
+       asp-route-sortMovieState="@(Model. SortViewModel. MovieTitleSort)"
+       asp-route-selectedMovieGenre="@(Model.FilteredViewModel.SelectedMovieGenre)"
+       asp-route-selectedMovieTitle="@(Model.FilteredViewModel.SelectedMovieTitle)"
+       class="btn btn-outline-dark">
+        Вперед
+        <i class="glyphicon glyphicon-chevron-right"></i>
+    </a>
+}
