--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,67 +1,37 @@
-/* site.css */
+.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+}
+
+html {
+    position: relative;
+    min-height: 100%;
+}
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f8f9fa; /* Светлый фон */
-    color: #333; /* Темный текст */
+    margin-bottom: 60px;
 }
 
-.container {
-    padding-top: 2rem; /* Отступ сверху */
+
+@font-face {
+    font-family: 'FontAwesome';
+    src: url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff2') format('woff2'), url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff') format('woff'), url('https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/fonts/fontawesome-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-weight: bold; /* Жирный шрифт для заголовков */
+.glyphicon {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-    color: #007bff; /* Синий цвет для ссылок */
+.glyphicon-chevron-right:before {
+    content: "\f054";
 }
 
-    a:hover {
-        text-decoration: none; /* Убирает подчеркивание при наведении */
-    }
-
-/* site.css */
-
-.movie-item {
-    border: 1px solid #ddd; /* Тонкая граница вокруг карточек фильмов */
-    padding: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 5px; /* Скругленные углы */
+.glyphicon-chevron-left:before {
+    content: "\f053";
 }
-
-.movie-title {
-    font-size: 1.2rem; /* Крупный шрифт для названия фильма */
-    font-weight: bold;
-}
-
-.movie-details {
-    color: #6c757d; /* Серый цвет для деталей фильма */
-}
-
-.movie-poster {
-    width: 100%;
-    height: 200px;
-    object-fit: cover; /* Покрывает всю область изображения */
-    border-radius: 5px; /* Скругленные углы */
-}
-
-/* site.css */
-
-.form-group {
-    margin-bottom: 1rem; /* Отступ между полями формы */
-}
-
-.form-control {
-    border-radius: 5px; /* Скругленные углы для полей ввода */
-}
-
-.btn-primary {
-    background-color: #007bff; /* Синий цвет для кнопки "Сохранить" */
-    border: none; /* Убирает границу */
-}
-
-    .btn-primary:hover {
-        background-color: #0069d9; /* Более темный синий при наведении */
-    }
